reimplement idtype/search api
